2013-04-13  Moritz Bunkus  <moritz@bunkus.org>

        * installer: The installation directory will no longer be added to
        the PATH environment variable.

        * mkvmerge: bug fix: The parsing of the AAC AudioSpecificConfig
        structure (the bytes contained in Matroska's CodecPrivate and in
        MP4's "ESDS" atom) was fixed to support parsing the
        GASpecificConfig and the ProgramConfigElement if the channel
        configuration is 0. Fixes #872.

2013-04-09  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Loading chapters from Matroska files will open the
        file in read-only mode allowing to read from write-protected
        files.

2013-04-04  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: All entries in chapters imported from MPLS
        playlists were named "Chapter 0". The numbering has been
        fixed. Fixes #870.

2013-04-01  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Selecting the lowest process priority
        with "--priority lowest" will cause mkvmerge to also select an
        idle/background I/O priority. Implements #863.

2013-03-31  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Fixed reading AVI files with audio chunks of
        size 0. Fixes #843.

2013-03-29  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: new feature: Add control for new option
        "--fix-bitstream-timing-information".

2013-03-20  Giuseppe De Robertis <giuseppe.derobertis@ba.infn.it>

        * mkvmerge: new feature: Add option for fixing the timing
        information in video track bitstreams
        (--fix-bitstream-timing-information).

2013-03-18  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: enhancement: Matroska reader: If mkvmerge encounters a
        broken file structure it will output the last timecode
        successfully read before resyncing. After the resync the first
        cluster timecode will be reported as well.
